tests/expected_invalid_public_reason_private_payload.diag.out
<input>:7:18: error: public API cannot reference private type 'Hidden'
        Bad { value: Hidden },
                     ^^^^^^
